# dsme

./: .depend  .gitignore  .gitmodules  Makefile.am  Makefile.custom  configure.ac  dsme-plugin.pc  dsme-plugin.pc.in  verify_version.sh
debian/: changelog  control  dsme-testcases.install  dsme.init  dsme.install  dsme.upstart  rules
dsme/: Makefile.am  dsme-rd-mode.c  dsme-server.c  dsme-server.h  dsme-wdd-wd.c  dsme-wdd-wd.h  dsme-wdd.c  dsme.conf  dsmesock.c  logging.c  mainloop.c  modulebase.c  oom.c  timers.c  utility.c  utility.h
getbootstate/: Makefile.am  getbootstate.c
include/dsme/: dsmesock.h  logging.h  modulebase.h  modules.h  musl-compatibility.h  timers.h
modules/: Makefile.am  abootsettings.c  alarmtracker.c  batterytracker.c  bootreasonlogger.c  dbusautoconnector.c  dbusproxy.c  dbusproxy.h  diskmonitor.c  diskmonitor.h  diskmonitor_backend.c  dsme_dbus.c  dsme_dbus.dot  dsme_dbus.h  emergencycalltracker.c  heartbeat.c  heartbeat.h  iphb.c  lifeguard.c  malf.c  malf.h  powerontimer.c  powerontimer_backend.c  processwd.c  pwrkeymonitor.c  runlevel.c  runlevel.h  shutdownfeedback.c  spawn.c  startup.c  state-internal.h  state.c  tempreaper.c  thermalflagger.c  thermalmanager.c  thermalmanager.h  thermalobject.c  thermalsensor_generic.c  upstart.c  usbtracker.c  (+3 more)
preinit/: set_system_time
rpm/: dsme.service  dsme.service.in  dsme.spec
test/: Makefile.am  abnormalexitwrapper.c  abnormalexitwrapper_tester.c  dsmetest.c  dummy_bme.c  processwdtest.c  stub_cal.h  stub_dbus.h  stub_dsme_dbus.h  stub_timers.h  testdriver.h  testmod_alarmtracker.c  testmod_emergencycalltracker.c  testmod_state.c  testmod_usbtracker.c  utils_misc.h
tests/: tests.xml
util/: Makefile.am  bootstate.c  dsme-exec-helper.c  dsmetool.c  kick_wd.c  kicker.c  rpdir.c  waitfordsme.c
